Fix Overflow of Hero section on small screens
Because the height of .hero is dynamic and the height of its content is static,
on smaller screens the content overflows over the CJEM section.
Fixed by adding a min-height to .hero

--- a/frontend/src/components/Hero/Hero.scss
+++ b/frontend/src/components/Hero/Hero.scss
@@ -1,6 +1,7 @@
 .hero{
     padding: 0 16rem;
     height: 100vh;
+    min-height: 40rem;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -12,13 +13,12 @@
         align-items: center;
         justify-content: center;
         flex-direction: column;
-        gap: 2rem;
+        gap: 1rem;
 
         &-text{
             line-height: 110px;
-            font-size: 5rem;
+            font-size: 4rem;
             font-weight: 700;
-            margin-bottom: 2rem;
         }
 
         &-buttons{
